--- a/CleanArchitectureApp.Tests/CleanArchitectureApp.Tests.csproj
+++ b/CleanArchitectureApp.Tests/CleanArchitectureApp.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -24,6 +25,12 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchitectureApp.Application\CleanArchitectureApp.Application.csproj" />
+    <ProjectReference Include="..\CleanArchitectureApp.Domain\CleanArchitectureApp.Domain.csproj" />
+    <ProjectReference Include="..\CleanArchitectureApp.Infrastructure\CleanArchitectureApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
