--- a/CleanArchitectureApp/CleanArchitectureApp.csproj
+++ b/CleanArchitectureApp/CleanArchitectureApp.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchitectureApp.Application\CleanArchitectureApp.Application.csproj" />
+  </ItemGroup>
+
 </Project>
