Security Adjustments for Authorize and no-authorize methods. Refactor in unittest

--- a/CleanArchitectureApp.Tests/CleanArchitectureApp.Tests.csproj
+++ b/CleanArchitectureApp.Tests/CleanArchitectureApp.Tests.csproj
@@ -34,4 +34,10 @@
     <ProjectReference Include="..\CleanArchitectureApp.Infrastructure\CleanArchitectureApp.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
