--- a/CleanArchitectureApp.Tests/CleanArchitectureApp.Tests.csproj
+++ b/CleanArchitectureApp.Tests/CleanArchitectureApp.Tests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
     <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -25,13 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\CleanArchitectureApp.Application\CleanArchitectureApp.Application.csproj" />
     <ProjectReference Include="..\CleanArchitectureApp.Domain\CleanArchitectureApp.Domain.csproj" />
     <ProjectReference Include="..\CleanArchitectureApp.Infrastructure\CleanArchitectureApp.Infrastructure.csproj" />
+    <ProjectReference Include="..\CleanArchitectureApp\CleanArchitectureApp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
