Database connection DemoDB, Dapper reference and refactoring in repository and services layers

--- a/CleanArchitectureApp/appsettings.json
+++ b/CleanArchitectureApp/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "JwtBearer": {
     "Token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYW1lIjoiTWlnbGlhbmlzUHJvamVjdCJ9.MVEuxIsbBYnD367MMwubnnzrK3GvQZxUEJgxsVF2QUQ"
+  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Data Source=Demo.db"
+
+  //}
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Demo.db"
   }
 }
