--- a/CleanArchitectureApp.Infrastructure/CleanArchitectureApp.Infrastructure.csproj
+++ b/CleanArchitectureApp.Infrastructure/CleanArchitectureApp.Infrastructure.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\CleanArchitectureApp.Domain\CleanArchitectureApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\Impl\" />
+  </ItemGroup>
+
 </Project>
