refactor tests  and clean unused references.

--- a/CleanArchitectureApp.Tests/CleanArchitectureApp.Tests.csproj
+++ b/CleanArchitectureApp.Tests/CleanArchitectureApp.Tests.csproj
@@ -10,6 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Mocks\Utils\**" />
+    <EmbeddedResource Remove="Mocks\Utils\**" />
+    <None Remove="Mocks\Utils\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
@@ -37,10 +43,6 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Mocks\Utils\" />
   </ItemGroup>
 
 </Project>
