--- a/CleanArchitectureApp/CleanArchitectureApp.csproj
+++ b/CleanArchitectureApp/CleanArchitectureApp.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>37de982d-5cff-45ad-92c1-fba8de3604fb</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
