adding front layer in proyect, changes in docker-compose for muliples services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   cleanarchitectureapp:
+    container_name: cleanarchitectureapp
     image: ${DOCKER_REGISTRY-}cleanarchitectureapp
     build:
       context: .
@@ -15,3 +16,11 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+  
+  cleanarchitectureappfront:
+    container_name: cleanarchitectureappfront
+    build:
+      context: ./CleanArchitectureAppFront
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
